--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,3 +30,12 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
+Imports: 
+    DBI,
+    dbplyr,
+    dplyr,
+    logger,
+    RPostgres,
+    withr
+Suggests: 
+    rstudioapi
