Update namespace to include .data and .env
These are reexported form rlang to avoid lintr errors

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,4 +2,7 @@
 
 export(export_pacta_files)
 export(get_factset_entity_info)
+export(get_factset_financial_data)
 importFrom(dplyr,"%>%")
+importFrom(rlang,.data)
+importFrom(rlang,.env)
