--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,12 +2,12 @@
 
 export(connect_factset_db)
 export(export_pacta_files)
-export(get_factset_entity_financing_data)
-export(get_factset_entity_info)
-export(get_factset_financial_data)
-export(get_factset_fund_data)
-export(get_factset_isin_to_fund_table)
-export(get_factset_iss_emissions_data)
+export(get_entity_financing_data)
+export(get_entity_info)
+export(get_financial_data)
+export(get_fund_data)
+export(get_isin_to_fund_table)
+export(get_iss_emissions_data)
 importFrom(dplyr,"%>%")
 importFrom(rlang,.data)
 importFrom(rlang,.env)
