--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,7 +33,9 @@ RoxygenNote: 7.2.3
 Imports: 
     DBI,
     dbplyr,
+    digest,
     dplyr,
+    jsonlite,
     logger,
     rlang,
     RPostgres,
