test(repo): #41 Add ignored directory for testing outputs
add a `gitignore`'d directory to match expectations from `docker-compose` for output files

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       PGUSER: postgres
     volumes:
       - type: bind
-        source: ./outputs
+        source: ./factset-extracted
         target: /mnt/factset-extracted
         read_only: false
 
