feat(app): #45 Add function to access industry map

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(get_entity_ids)
 export(get_entity_info)
 export(get_financial_data)
 export(get_fund_data)
+export(get_industry_map_bridge)
 export(get_isin_to_fund_table)
 export(get_iss_emissions_data)
 export(get_issue_code_bridge)
