test(app): #35 Add tests for uniqueness in override mapping

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -41,4 +41,6 @@ Imports:
     RPostgres,
     withr
 Suggests: 
-    rstudioapi
+    rstudioapi,
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
