--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(get_fund_data)
 export(get_isin_to_fund_table)
 export(get_iss_emissions_data)
 export(get_issue_code_bridge)
+export(get_manual_sector_override)
 importFrom(dplyr,"%>%")
 importFrom(rlang,.data)
 importFrom(rlang,.env)
