--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,13 +32,14 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.0
 Imports: 
     DBI,
+    RPostgres,
     dbplyr,
     digest,
     dplyr,
     jsonlite,
     logger,
+    lubridate,
     rlang,
-    RPostgres,
     withr
 Suggests: 
     rstudioapi,
