--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -10,4 +10,4 @@ name: Docker
 jobs:
   docker:
     name: Docker actions
-    uses: RMI-PACTA/actions/.github/workflows/docker.yml@a53dc9f92764388682547f1d76763fabd1e907f2
+    uses: RMI-PACTA/actions/.github/workflows/docker.yml@feat/57-comment-history
