--- a/.github/workflows/R.yml
+++ b/.github/workflows/R.yml
@@ -16,4 +16,4 @@ name: R
 jobs:
   R-package:
     name: R Package Checks
-    uses: RMI-PACTA/actions/.github/workflows/R.yml@main
+    uses: RMI-PACTA/actions/.github/workflows/R.yml@ci/r-cmd-check
