Add `tibble` to testing dependencies

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -44,5 +44,6 @@ Imports:
 Suggests: 
     RSQLite,
     rstudioapi,
-    testthat (>= 3.0.0)
+    testthat (>= 3.0.0),
+    tibble
 Config/testthat/edition: 3
