--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -10,4 +10,4 @@ name: Docker
 jobs:
   docker:
     name: Docker actions
-    uses: RMI-PACTA/actions/.github/workflows/docker.yml@main
+    uses: RMI-PACTA/actions/.github/workflows/docker.yml@fix/74-limit-history-output
