Set @Antoine-Lalechere as codeowner override list

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -3,3 +3,5 @@
 # @AlexAxthelm will be requested for review when someone opens 
 # a pull request.
 *       @AlexAxthelm
+
+R/pacta_sector_override_mapping.R @Antoine-Lalechere
